# LegalQA-RAG

./: .gitignore  README.md  app.py  pyproject.toml  run_et.py  run_etl.py
embed/: embed_acts.py  embed_questions.py
etl/common/: config.json  index.py  question_index.py  raw_question_index.py  transformed_question_index.py
etl/common/actindex/: act_index_base.py  leaf_node_act_index.py  tree_act_index.py
etl/common/keywordindex/: keyword_index_base.py  raw_keyword_index.py  transformed_keyword_index.py
etl/common/questionindex/: question_index_base.py  raw_question_index.py  transformed_question_index.py
etl/extract/extractacts/: act_parser.py  act_payloads.py  extract_acts.py
etl/extract/extractkeywords/: extract_keywords.py  keyword_payloads.py
etl/validate/: validate.py
evaluations/: base_eval.py
extract/extractquestions/: extract_questions_base.py  extract_questions_domain.py  question_parser.py  question_payloads.py
models/: api_models.py
models/datamodels/: act_vector.py  keyword.py  leaf_act.py  question.py  tree_act.py
mongodb/: base_database.py  config.json  mongo_singleton.py  mongodb.conf
mongodb/collections/: act_vector_collection.py  keyword_collection.py  leaf_act_collection.py  mongo_act_vector_collection.py  mongo_keyword_collection.py  mongo_leaf_act_collection.py  mongo_question_collection.py  question_collection.py
qdrantdb/: config.json  qdrant_base_database.py  qdrant_singleton.py
qdrantdb/collections/: qdrant_act_collection.py  qdrant_question_collection.py
sessionmanager/: config.json  session_manager.py
templates/: privacy_policy.html
(+9 files in other folders)
