[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["soleksy <szy.oleksy@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datetime = "^5.4"
python-dotenv = "^1.0.0"
logging = "^0.4.9.6"
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"
aiohttp = "^3.9.1"
asyncio = "^3.4.3"
tenacity = "^8.2.3"
bs4 = "^0.0.1"
tqdm = "^4.66.1"
pydantic = "^2.5.3"
requests = "^2.31.0"
roman = "^4.1"
tiktoken = "^0.5.2"
transformers = "^4.37.1"
langchain = "^0.1.4"
motor = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
